@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

class Organization {
}

class Collaborator {
    name
}

class Agenda {
    entriesList
}

class Entry {
    status
}

Organization "1" -- "1..*" Collaborator : has >
Agenda "1" -- "1..*" Entry : has >
Organization "1" -- "1" Agenda : has >
Collaborator "1" -- "1..*" Entry : completes >
@enduml